[package]
name = "runbeam-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
once_cell = "1.20"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
keyring = { version = "3.6", features = ["sync-secret-service"] }

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
