[package]
name = "runbeam-sdk"
version = "0.5.0"
edition = "2021"
description = "Rust SDK for integrating with the Runbeam Cloud API, providing JWT validation, API client, and generic secure token storage"
license = "Apache-2.0"
repository = "https://github.com/aurabx/runbeam-sdk-rs"
homepage = "https://runbeam.io"
documentation = "https://docs.rs/runbeam-sdk"
keywords = ["runbeam", "api", "jwt", "gateway", "integration"]
categories = ["api-bindings", "authentication", "web-programming"]
exclude = ["WARP.md", "docs/", ".idea/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3"
once_cell = "1.20"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
keyring = { version = "3.6", features = ["apple-native", "sync-secret-service"] }
age = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
secrecy = "0.8"
harmony-dsl = { path = "../harmony-dsl" }
toml = "0.8.22"
regex = "1.11"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.13"
tokio-test = "0.4"
serial_test = "3.2"
wiremock = "0.5"
